<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".view.PlaceDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/crd_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:layout_margin="20dp"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_place"
            app:tint="@color/blue"
            android:contentDescription="@string/image_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_name_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/txtPlaceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_name"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_category_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/txtPlaceCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_category"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_address_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/txtPlaceAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_address"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/btnDirections"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_directions"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/blue"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>