<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/crdContainer"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height= "90dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgPlace"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:background="@color/blue"
                android:src="@drawable/ic_place"
                android:contentDescription="@string/place_image"
                android:scaleType="fitCenter"
                android:layout_centerVertical="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="5dp"
                android:layout_toRightOf="@+id/imgPlace"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/txtPlaceName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/place_name"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtPlaceCategoryTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/place_category_title"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/txtPlaceCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/place_category"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:layout_marginStart="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtPlaceRegionTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/place_region_title"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/txtPlaceRegion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/place_region"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:layout_marginStart="5dp"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>